Requerimientos tablero Estudiante y Secretaria listos pasar a excel

--- a/index.html
+++ b/index.html
@@ -518,6 +518,8 @@
           break;
       }
     }
+
+    localStorage.removeItem("number");
   </script>
 
   <script src="vendors/jquery/jquery-3.2.1.min.js"></script>
