Commit arreglo correo restablecer contraseña

--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Parason Software - Contact</title>
-  <link rel="icon" href="img/Fevicon.png" type="image/png">
+  <title>SI-COMMITEE || Contacto</title>
+  <link rel="icon" type="image/png" href="img/unilibre-logo3.png" />
 
   <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css">
   <link rel="stylesheet" href="vendors/fontawesome/css/all.min.css">
@@ -42,11 +42,11 @@
               <li class="nav-item active"><a class="nav-link" href="contact.html">Contact</a></li>
             </ul>
 
-            <ul class="navbar-right">
+           <!-- <ul class="navbar-right">
               <li class="nav-item">
                 <a href="comite/Login"><button class="button button-header bg">Ingresar</button></a>
               </li>
-            </ul>
+            </ul>-->
           </div>
         </div>
       </nav>
@@ -122,37 +122,74 @@
                 Envíenos su consulta en cualquier momento!</p>
             </div>
           </div>
+          <div class="media contact-info">
+            <span class="contact-info__icon"><i class="ti-alert"></i></span>
+            <div class="media-body">
+              <h3>Importante</h3>
+              <p>
+                Recuerde que este medio es solo para PQR al comite de proyectos...</p>
+            </div>
+          </div>
         </div>
         <div class="col-md-8 col-lg-9">
-          <form action="#/" class="form-contact contact_form" action="contact_process.php" method="post"
-            id="contactForm" novalidate="novalidate">
+          <form method="post" action="enviarmsg.php" class="form-contact contact_form" id="contactForm">
             <div class="row">
               <div class="col-lg-5">
                 <div class="form-group">
-                  <input class="form-control" name="name" id="name" type="text" placeholder="Ingrese su Nombre">
+                  <input class="form-control" name="Nombre" id="name" type="text" placeholder="Ingrese su Nombre" required>
                 </div>
                 <div class="form-group">
-                  <input class="form-control" name="email" id="email" type="email"
-                    placeholder="Ingrese su correo electrónico">
+                  <input class="form-control" name="Correo" id="email" type="email"
+                    placeholder="Ingrese su correo electrónico" required>
                 </div>
                 <div class="form-group">
-                  <select class="form-control" name="" id="">
-                    <option value="1">1</option>
+                  <select class="form-control" name="para" required>
+                    <option value="x">Seleccione...</option>
+												<option value="pabloe.carrenoh@unilibre.edu.co">Administrador Web</option>
+												<option value="lidae.ruizm@unilibre.edu.co">Comité de Ambiental</option>
+												<option value="ever.fuentes@unilibre.edu.co">Comité de Industrial</option>
+												<option value="ricardoa.riosl@unilibre.edu.co">Comité de Mecánica</option>
+												<option value="pabloe.carrenoh@unilibre.edu.co">Comité de Sistemas</option>
                   </select>
                 </div>
 
               </div>
               <div class="col-lg-7">
                 <div class="form-group">
-                  <textarea class="form-control different-control w-100" name="message" id="message" cols="30" rows="5"
-                    placeholder="Ingrese Mensaje"></textarea>
+                  <textarea class="form-control different-control w-100" name="Mensaje" id="message" cols="30" rows="5"
+                    placeholder="Ingrese Mensaje" required></textarea>
                 </div>
               </div>
             </div>
             <div class="form-group text-center text-md-right mt-3">
-              <button type="submit" class="button button-contactForm">Send Message</button>
+              <button type="submit" class="button button-contactForm">Enviar</button>
             </div>
           </form>
+
+          <button id="idButtonModalMessageSend" type="button" style="display: none;" class="btn btn-default" data-toggle="modal" data-target="#modal-default">
+            Launch Default Modal
+          </button>
+          <div class="modal fade" id="modal-default" style="display: none;" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h4 class="modal-title">Enviado</h4>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <p>Su mensaje ha sido enviado</p>
+                </div>
+                <div class="modal-footer justify-content-between">
+                  <button type="button" class="btn btn-default" data-dismiss="modal" style="background-color: #21146a; color: #fff;">Close</button>
+                  <!--<button type="button" class="btn btn-primary">Save changes</button>-->
+                </div>
+              </div>
+              <!-- /.modal-content -->
+            </div>
+            <!-- /.modal-dialog -->
+          </div>
         </div>
       </div>
     </div>
@@ -177,16 +214,27 @@
           <script>document.write(new Date().getFullYear());</script> SI-COMMITEE</a>
           <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
         </p>
-        <div class="col-lg-4 col-md-12 text-center text-lg-right footer-social">
+       <!-- <div class="col-lg-4 col-md-12 text-center text-lg-right footer-social">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
           <a href="#"><i class="fab fa-dribbble"></i></a>
           <a href="#"><i class="fab fa-behance"></i></a>
-        </div>
+        </div> -->
       </div>
     </div>
   </footer>
   <!-- ================ End footer Area ================= -->
+  <script src="comite/LocalSources/js/jQuery/3.5.1/jquery.min.js"></script>
+  <script>
+    $(document).ready(function(){
+      //alert("12");
+      if(localStorage.getItem("SendMessage") == "true"){
+        //alert("True");
+        localStorage.setItem("SendMessage") = false;
+        document.getElementById("idButtonModalMessageSend").click();
+      } 
+    });
+  </script>
 
   <script src="vendors/jquery/jquery-3.2.1.min.js"></script>
   <script src="vendors/bootstrap/bootstrap.bundle.min.js"></script>
