--- a/index.html
+++ b/index.html
@@ -241,10 +241,10 @@
             <div class="testimonial__content">
               <h3>Ing. Pablo E. Carreño H.</h3>
               <p>pabloe.carrenoh@unilibre.edu.co</p>
-              <p class="testimonial__i">Also made from. Give may saying meat there from heaven it lights face had is
+            <!--  <p class="testimonial__i">Also made from. Give may saying meat there from heaven it lights face had is
                 gathered god earth light for life may itself shall whales made they're blessed whales also made from
                 give may saying meat. There from heaven it lights face had also made from. Give may saying meat there
-                from heaven</p>
+                from heaven</p> -->
             </div>
           </div>
           <div class="testimonial__item text-center">
@@ -301,7 +301,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-4">
-              <a href="./modelo/Reglamento.pdf" target="_blank">
+              <a href="comite/modelo/Reglamento.pdf" target="_blank">
                 <div class="card card-feature text-center text-lg-left mb-4 mb-lg-0">
 
                   <h3 class="card-feature__title">Reglamento</h3>
@@ -310,15 +310,15 @@
               </a>
             </div>
             <div class="col-lg-4">
-              <a href="./modelo/reglamento-grados-ingenieria-2019.pdf" target="_blank">
+              <a href="comite/modelo/reglamento-grados-ingenieria-2019.pdf" target="_blank">
                 <div class="card card-feature text-center text-lg-left mb-4 mb-lg-0">
-                  <h3 class="card-feature__title">Reglamento </h3>
-                  <p class="card-feature__subtitle">v4.0 2019 / Antes de marzo 2019</p>
+                  <h3 class="card-feature__title">Reglamento v4.0 2019</h3>
+                  <p class="card-feature__subtitle">Antes de marzo 2019</p>
                 </div>
               </a>
             </div>
             <div class="col-lg-4">
-              <a href="./modelo/propuesta.docx" target="_blank">
+              <a href="comite/modelo/propuesta.docx" target="_blank">
                 <div class="card card-feature text-center text-lg-left mb-4 mb-lg-0">
                   <h3 class="card-feature__title">Formato presentación Propuesta</h3>
                   <p class="card-feature__subtitle">A partir de marzo 2019</p>
@@ -339,7 +339,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-4">
-              <a href="./modelo/GUÍA PARA LA ELABORACIÓN DEL ANTEPROYECTO.pdf" target="_blank">
+              <a href="comite/modelo/guia_anteproyecto.pdf" target="_blank">
                 <div class="card card-feature text-center text-lg-left mb-4 mb-lg-0">
                   <h3 class="card-feature__title">Guía Elaboracion Anteproyecto</h3>
                   <p class="card-feature__subtitle">A partir de marzo 2019</p>
@@ -347,7 +347,7 @@
               </a>
             </div>
             <div class="col-lg-4">
-              <a href="./modelo/GUÍA PARA LA ELABORACIÓN DEL DOCUMENTO FINAL.pdf" target="_blank">
+              <a href="comite/modelo/guia_documento.pdf" target="_blank">
                 <div class="card card-feature text-center text-lg-left mb-4 mb-lg-0">
                   <h3 class="card-feature__title">Guía Elaboración documento Final</h3>
                   <p class="card-feature__subtitle">A partir de marzo 2019</p>
@@ -355,9 +355,9 @@
               </a>
             </div>
             <div class="col-lg-4">
-              <a href="./modelo/rubrica-poster.docx" target="_blank">
+              <a href="comite/modelo/rubrica-poster.docx" target="_blank">
                 <div class="card card-feature text-center text-lg-left mb-4 mb-lg-0">
-                  <h3 class="card-feature__title">Guía Elaboración documento Final</h3>
+                  <h3 class="card-feature__title">Rúbrica - Presentacion de Póster</h3>
                   <p class="card-feature__subtitle">A partir de marzo 2019</p>
                 </div>
               </a>
@@ -408,12 +408,12 @@
           <script>document.write(new Date().getFullYear());</script> SI-COMMITEE</a>
           <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
         </p>
-        <div class="col-lg-4 col-md-12 text-center text-lg-right footer-social">
+        <!--<div class="col-lg-4 col-md-12 text-center text-lg-right footer-social">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
           <a href="#"><i class="fab fa-dribbble"></i></a>
           <a href="#"><i class="fab fa-behance"></i></a>
-        </div>
+        </div>-->
       </div>
     </div>
   </footer>
