Agregarnos al inicio

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <div class="owl-carousel owl-theme testimonial">
           <div class="testimonial__item text-center">
             <div class="testimonial__img">
-              <img src="img/testimonial/testimonial1.png" alt="">
+              <img src="img/home/person.jpg" alt="">
             </div>
             <div class="testimonial__content">
               <h3>Ing. Pablo E. Carreño H.</h3>
@@ -249,41 +249,48 @@
           </div>
           <div class="testimonial__item text-center">
             <div class="testimonial__img">
-              <img src="img/testimonial/testimonial1.png" alt="">
+              <img src="img/home/person.jpg" alt="">
             </div>
             <div class="testimonial__content">
               <h3>Ing. Mauricio A. Alonso M.</h3>
-              <p>Executive, ACI Group</p>
-              <p class="testimonial__i">Also made from. Give may saying meat there from heaven it lights face had is
-                gathered god earth light for life may itself shall whales made they're blessed whales also made from
-                give may saying meat. There from heaven it lights face had also made from. Give may saying meat there
-                from heaven</p>
+              <p></p>
+              
             </div>
           </div>
           <div class="testimonial__item text-center">
             <div class="testimonial__img">
-              <img src="img/testimonial/testimonial1.png" alt="">
+              <img src="img/home/person.jpg" alt="">
             </div>
             <div class="testimonial__content">
               <h3>Ing. Fabian Blanco G.</h3>
-              <p>Executive, ACI Group</p>
-              <p class="testimonial__i">Also made from. Give may saying meat there from heaven it lights face had is
-                gathered god earth light for life may itself shall whales made they're blessed whales also made from
-                give may saying meat. There from heaven it lights face had also made from. Give may saying meat there
-                from heaven</p>
+              <p></p>
             </div>
           </div>
           <div class="testimonial__item text-center">
             <div class="testimonial__img">
-              <img src="img/testimonial/testimonial1.png" alt="">
+              <img src="img/home/person.jpg" alt="">
             </div>
             <div class="testimonial__content">
               <h3>Ing. Fredys A. Simanca H.</h3>
-              <p>Executive, ACI Group</p>
-              <p class="testimonial__i">Also made from. Give may saying meat there from heaven it lights face had is
-                gathered god earth light for life may itself shall whales made they're blessed whales also made from
-                give may saying meat. There from heaven it lights face had also made from. Give may saying meat there
-                from heaven</p>
+              <p></p>
+            </div>
+          </div>
+          <div class="testimonial__item text-center">
+            <div class="testimonial__img">
+              <img src="img/home/person.jpg" alt="">
+            </div>
+            <div class="testimonial__content">
+              <h3>Ing. Santiago Patiño Hernández</h3>
+              <p></p>
+            </div>
+          </div>
+          <div class="testimonial__item text-center">
+            <div class="testimonial__img">
+              <img src="img/home/person.jpg" alt="">
+            </div>
+            <div class="testimonial__content">
+              <h3>Ing. Victor Jaime Cuellar Castillo</h3>
+              <p></p>
             </div>
           </div>
         </div>
