--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
             <ul class="nav navbar-nav menu_nav justify-content-end">
-              <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+              <li class="nav-item active"><a class="nav-link" href="index.html">Inicio</a></li>
 
-              <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+              <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
               <!--<li class="nav-item"><a id="Modal_Login" href="#theModal" class="nav-link" data-toggle="modal"
                   data-target="#theModal">Modal</a></li>
               -->
